# ParadexMonitor

./: .gitignore  CMakeLists.txt  README.md
docs/: SESSION_HANDOFF_20260410.md  SESSION_HANDOFF_20260410_v2.md  installer_formats.md  whitepaper.md
engine/: pyproject.toml
engine/ppm_engine/: __init__.py  __main__.py  cli.py  detect.py
engine/ppm_engine/adapters/: __init__.py  elf.py  inno.py  ishield.py  iso.py  lnk.py  macho.py  msi.py  msix.py  node_sea.py  nsis.py  pe.py  pyinst.py  sfactory.py  sfx7z.py  squirrel.py
engine/ppm_engine/bridges/: base.py  exms_bridge.py  hce_bridge.py  qcu_bridge.py  urp_bridge.py
engine/ppm_engine/depgraph/: __init__.py  build.py  diff.py  edges.py  nodes.py  query.py  render.py
engine/ppm_engine/patterns/: __init__.py  apc_inject.py  base.py  cm_callback.py  dkom.py  handle_strip.py  ob_callback.py  xor_payload.py
engine/ppm_engine/propagation/: __init__.py  chain.py
engine/ppm_engine/reconstruct/: __init__.py  architecture.py  pseudo.py
engine/ppm_engine/topology/: __init__.py  callgraph.py  coupling.py  dataflow.py
engine/ppm_engine/unpack/: __init__.py  detect.py  encoding.py  entropy.py  topo_strip.py  xor_crack.py
ppm/core/: ansi.h  compat.h  engine_ipc.cpp  engine_ipc.h  globals.h  main.cpp
ppm/core/plugin/: Command.h  IPlugin.h  PluginRegistry.cpp  PluginRegistry.h
ppm/plugins/callbacks/: plugin.cpp
ppm/plugins/drivers/: plugin.cpp
ppm/plugins/elevation/: plugin.cpp
ppm/plugins/handles/: plugin.cpp
ppm/plugins/inspect/: plugin.cpp
ppm/plugins/loader/: plugin.cpp
ppm/plugins/memory/: plugin.cpp
ppm/plugins/recon/: plugin.cpp
ppm/plugins/winlogon/: plugin.cpp
tests/samples/: rk64.sys
