[project]
name = "ppm-engine"
version = "0.2.0"
description = "Paradex Process Monitor - Python analysis engine"
requires-python = ">=3.10"
dependencies = [
    "capstone>=5.0",
    "pefile>=2023.2",
    "lief>=0.14",
    "numpy>=1.24",
]

[project.optional-dependencies]
full = [
    "unicorn>=2.0",      # emulation-based unpacking
]

[project.scripts]
ppm = "ppm_engine.cli:main"
ppm-engine = "ppm_engine.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
